# water-controller

./: .gitignore  CMakeLists.txt  README.md  deploy.sh
firmware/water-controller/: .gitignore  Makefile
firmware/water-controller/components/udp-logging/: CMakeLists.txt  udp_logging.c
firmware/water-controller/main/: CMakeLists.txt  common.h  config.h  gcp.c  hw.c  jwt.c  main.c  ota.c  pcnt.c  tools.c  web.c  wifi.c
firmware/water-controller/www/: index.html
main/: CMakeLists.txt  config.h  credentials-example.h  gcp.c  jwt.c  main.c  ota.c  pcnt.c  tools.c  web.c  wifi.c
